# yolo-benchmark

./: README.md
scripts/: auto_benchmarking.sh
src/InferenceBenckmark/: main.py
src/InferenceBenckmark/interface/: mqttconsumer.py
src/InferenceBenckmark/monitor/: consumptionmetrics.py  performancemetrics.py
src/InferenceBenckmark/report/: table.py
src/InferenceEngine/cpp/: CMakeLists.txt  main.cpp
src/InferenceEngine/cpp/ai/architectures/: ultralyticsyolo.cpp  ultralyticsyolo.hpp  uyolo.cpp  uyolo.hpp
src/InferenceEngine/cpp/ai/inferencers/: litert.cpp  litert.hpp  onnxrt.cpp  onnxrt.hpp  opencvrt.cpp  opencvrt.hpp
src/InferenceEngine/cpp/ai/processors/: detector.cpp  detector.hpp
src/InferenceEngine/cpp/detection/: postprocessing.cpp  postprocessing.hpp
src/InferenceEngine/cpp/image/: plotter.cpp  plotter.hpp  preprocessing.cpp  preprocessing.hpp
src/InferenceEngine/cpp/interface/: mqttproducer.cpp  mqttproducer.hpp
src/InferenceEngine/cpp/model/: detection.cpp  detection.hpp
src/InferenceEngine/python/: main.py
src/InferenceEngine/python/ai/architectures/: ultralyticsyolo.py  yolo11.py  yolov5.py  yolov8.py
src/InferenceEngine/python/ai/inferencers/: litert.py  onnxrt.py  opencvrt.py
src/InferenceEngine/python/ai/processors/: detector.py
src/InferenceEngine/python/detection/: postprocessing.py
src/InferenceEngine/python/image/: plotter.py  preprocessing.py
src/InferenceEngine/python/interface/: mqttproducer.py
src/InferenceEngine/python/model/: detection.py
test/: CMakeLists.txt  main.cpp
